# pitchplease

./: .gitignore  CMakeLists.txt  README.md
examples/: detumbling.c  simple_adcs.c
src/: main.c
src/control/: control.c  control.h
src/dynamics/: README.md  dynamics.c  dynamics.h
src/sensors/: sensor_types.h  sensors.c  sensors.h
tests/: test_control.c  test_main.c  test_sensors.c
